fix bug #32013(MySQLi bind_result causes fatal error: memory limit reached) #this is a partial fix but it cannot be better. the user has to call #$stmt->store_result() and for a BLOB/MEDIUTEXT (and larger) space will be #allocated as big as the biggest column value.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@185296 c90b9560-bf6c-de11-be94-00142212c4b1